2010-01-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11127]
	* posix/regcomp.c (alc_eclosure_iter): Do not ignore
	re_node_set_insert failure; return REG_ESPACE.
	Patch by Paul Eggert.

2010-01-06  Ulrich Drepper  <drepper@redhat.com>

	* dirent/dirent.h: Fix typo in feature selection macro use.

2009-12-15  Ulrich Drepper  <drepper@redhat.com>

	* include/link.h (struct link_map): Move l_used into its own word.
	* elf/dl-lookup.c (_dl_lookup_symbol_x): Only update l_used when it is
	still zero.
	* elf/dl-object.c (_dl_new_object): Set dl_used if we know it is
	never really used.

2009-12-10  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11000]
	* nis/nss_nis/nis-hosts.c (_nss_nis_gethostbyname4_r): Always set
	*herrnop before returning.
	* nis/nss_nisplus/nisplus-hosts.c (internal_gethostbyname2_r):
	Likewise.
	* nss/nss_files/files-hosts.c (_nss_files_gethostbyname4_r): Handle
	TRYAGAIN errors separately.
	* sysdeps/posix/getaddrinfo.c (gaih_inet): Fix error handling of
	*name4_r after functions.

2009-11-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/grantpt.c (grantpt): Use CLOSE_ALL_FDS is available
	before the exec.
	* sysdeps/unix/sysv/linux/grantpt.c: New file.
	* login/programs/pt_chown.c (main): Don't print message on errors
	when doing real work.

	* csu/elf-init.c (__libc_csu_irel): New function.  Code to perform
	irel relocations split out from...
	(__libc_csu_init): ...here.
	* csu/libc-start.c [!SHARED]: Call __libc_csu_irel early.

2009-11-22  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/create_xid.c (_create_xid): Reinitialize state after fork.

2009-11-18  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #10162]
	* sysdeps/ia64/memchr.S: Don't use a simple loop on data shorter
	than software pipeline.  Properly recover from shorter read.

2009-11-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sync_file_range.c (sync_file_range):
	Implement using sync_file_range2 syscall if __NR_sync_file_range2
	is defined.